@@ -1,7 +1,6 @@
 
 *** Sticky Notes for the Gnome Desktop Environment. ***
 
-* Use enums
 * Accessibility
 	- Release enter not detected
 	- Note popup menu
