@@ -23,13 +23,8 @@
 /* Sticky Window Callback : Move the window or edit the title. */
 gboolean window_move_edit_cb(GtkWidget *widget, GdkEventButton *event, StickyNote *note)
 {
-	if (event->type == GDK_BUTTON_PRESS && event->button == 1) {
+	if (event->type == GDK_BUTTON_PRESS && event->button == 1)
 		gtk_window_begin_move_drag(GTK_WINDOW(note->window), event->button, event->x_root, event->y_root, event->time);
-
-		/* Pretend the note was edited, to trigger an auto-save. */
-		GtkTextBuffer *buffer = gtk_text_view_get_buffer(GTK_TEXT_VIEW(note->body));
-		gtk_text_buffer_set_modified(buffer, TRUE);
-	}
 	else if (event->type == GDK_2BUTTON_PRESS && event->button == 1)
 		stickynote_edit_title(note);
 
@@ -39,14 +34,9 @@ gboolean window_move_edit_cb(GtkWidget *widget, GdkEventButton *event, StickyNot
 /* Sticky Window Callback : Resize the window. */
 gboolean window_resize_cb(GtkWidget *widget, GdkEventButton *event, StickyNote *note)
 {
-	if (event->type == GDK_BUTTON_PRESS && event->button == 1) {
+	if (event->type == GDK_BUTTON_PRESS && event->button == 1)
 		gtk_window_begin_resize_drag(GTK_WINDOW(note->window), GDK_WINDOW_EDGE_NORTH_WEST,
 					     event->button, event->x_root, event->y_root, event->time);
-
-		/* Pretend the note was edited, to trigger an auto-save. */
-		GtkTextBuffer *buffer = gtk_text_view_get_buffer(GTK_TEXT_VIEW(note->body));
-		gtk_text_buffer_set_modified(buffer, TRUE);
-	}
 	
 	return TRUE;
 }
@@ -77,6 +67,8 @@ gboolean window_configure_cb(GtkWidget *widget, GdkEventConfigure *event, Sticky
 	note->w = event->width;
 	note->h = event->height;
 
+	stickynotes_save(note->stickynotes);
+
 	return FALSE;
 }
 
@@ -91,12 +83,11 @@ gboolean window_delete_cb(GtkWidget *widget, GdkEvent *event, StickyNote *note)
 /* Sticky Window Callback : Cross (leave or enter) the window. */
 gboolean window_cross_cb(GtkWidget *widget, GdkEventCrossing *event, StickyNote *note)
 {
-	if (event->type == GDK_LEAVE_NOTIFY) {
-		/* If the note was edited, save it. */
-		GtkTextBuffer *buffer = gtk_text_view_get_buffer(GTK_TEXT_VIEW(note->body));
-		if (gtk_text_buffer_get_modified(buffer))
-			stickynotes_save(note->stickynotes);
-	}
+	GtkTextBuffer *buffer = gtk_text_view_get_buffer(GTK_TEXT_VIEW(note->body));
+	
+	/* If the note was edited, save it. */
+	if (event->type == GDK_LEAVE_NOTIFY && gtk_text_buffer_get_modified(buffer))
+		stickynotes_save(note->stickynotes);
 	
 	/* Let other handlers receive this event. */
 	return FALSE;
@@ -105,17 +96,13 @@ gboolean window_cross_cb(GtkWidget *widget, GdkEventCrossing *event, StickyNote 
 /* Sticky Window Callback : On focus (in and out) of the window */
 gboolean window_focus_cb(GtkWidget *widget, GdkEventFocus *event, StickyNote *note)
 {
-	if (event->in)
-		stickynote_set_highlighted(note, TRUE);
+	GtkTextBuffer *buffer = gtk_text_view_get_buffer(GTK_TEXT_VIEW(note->body));
 	
-	else {
-		/* If the note was edited, save it. */
-		GtkTextBuffer *buffer = gtk_text_view_get_buffer(GTK_TEXT_VIEW(note->body));
-		if (gtk_text_buffer_get_modified(buffer))
-			stickynotes_save(note->stickynotes);
+	/* If the note was edited, save it. */
+	if (!event->in && gtk_text_buffer_get_modified(buffer))
+		stickynotes_save(note->stickynotes);
 
-		stickynote_set_highlighted(note, FALSE);
-	}
+	stickynote_set_highlighted(note, event->in);
 	
 	/* Let other handlers receive this event. */
 	return FALSE;
