@@ -1,3 +1,8 @@
+2003-04-15  Loban A Rahman <loban@earthling.net>
+	* *.h, *.c: Fixed reopened bug #110112.
+	* *.h, *.c: Used enums instead of magic numbers for applet default
+	  click behaviour choices.
+
 2003-04-08  Loban A Rahman <loban@earthling.net>
 
 	* stickynotes_applet_callbacks.c: Fixed bug #110112, stickynotes now
